examples/cafe-app/coffee-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: coffee-route
spec:
  host: cafe.example.com
  path: "/coffee"
  to:
    kind: Service
    name: coffee-svc 
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    key: |-
      -----BEGIN RSA PRIVATE KEY-----
      MIIEowIBAAKCAQEAo/ln2tuM7Awn0HSNQG2H0aNtpYwuKq8bPIeEr8XmhDMpI/wS
[...]
      JGQl1usEqyN/q5GnMt14aC5GdeHSjVx2O3Yfl+Gf5aHDnfIB8AvE
      -----END RSA PRIVATE KEY-----
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEDzCCAvegAwIBAgIJAPZ+V80VswZPMA0GCSqGSIb3DQEBBQUAMGIxCzAJBgNV
[...]
      9hkMA8IeqiDTQiv4X961Ey+SVrIYCpuw/RrC/jX9raLWWfg=
      -----END CERTIFICATE-----
