examples/cafe-app/tea-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: tea-route
spec:
  host: cafe.example.com
  path: "/tea"
  to:
    kind: Service
    name: tea-svc
